# pysbrl

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  appveyor.yml  azure-pipelines.yml  buildpy.sh  dev-requirements.txt  predict.c  pyproject.toml  pysbrl.c  pysbrl.h  pysbrl.i  pysbrl.py  pysbrl_wrap.c  requirements.txt  rulelib.c  setup.py  test-requirements.txt  train.c
c/: .gitignore  CMakeLists.txt  bit_vector.c  bit_vector.cpp  bit_vector.h  model  predict.c  pysbrl.c  pysbrl.cpp  pysbrl.h  pysbrl_wrap.c  rule.h  rulelib.c  rulelib.cpp  save_load.c  save_load.cpp  sbrlmod.c  sbrlmod.cpp  test.c  train.c  train.cpp  utils.c  utils.h
ci/: azure-mac-steps.yml  azure-manylinux-wheels.yml  azure-pipeline-build.yml  azure-publish-dist.yml  azure-setup.yml
cpp/: CMakeLists.txt  bit_vector.cpp  main.cpp  predict.cpp  pysbrl.cpp  rule.h  rulelib.cpp  save_load.cpp  train.cpp
data/: ttt_test.label  ttt_test.out
docker-build/: build.sh  run_build.sh
pysbrl/: __init__.py  pysbrl.py  rule_list.py  sbrl.py  train.py  utils.py
pysbrl_test/: pysbrl_test.py  rule_list_test.py
scripts/: build_wheels.sh  buildpy.sh  compile_swig.sh  docker_build.sh  run_docker_build.sh
swig/: numpy.i  pysbrl.i  pysbrl_wrap.c  pysbrl_wrap.cpp  sbrl.i  sbrl_wrap.c
